--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.0",
     "nodemon": "^3.1.10"
   }
 }
